base: init framework